# unslop

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  GETTING_STARTED.md  README.md  gemini-extension.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.clinerules/: humanizer.md  unslop.md
.codex/: config.toml  hooks.json
.cursor/rules/: humanizer.mdc  unslop.mdc
.cursor/skills/humanizer/: SKILL.md  anti-aiisms.md  prompt-templates.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  publish.yml  sync.yml  weekly-detector-bench.yml
.windsurf/rules/: humanizer.md  unslop.md
.windsurf/skills/unslop/: SKILL.md
benchmarks/: README.md  check_regression.py  detector_bench.py  run.py
benchmarks/results/: 20260419T183701Z.json  20260419T183843Z.json  20260419T183909Z.json  20260419T183947Z.json  20260419T184829Z.json  20260419T191626Z.json  20260419T192351Z.json  20260419T193058Z.json  20260419T195633Z.json  20260419T195915Z.json  20260419T195952Z.json  20260419T200342Z.json  20260419T200356Z.json  20260419T202009Z.json  20260419T202341Z.json  20260419T202607Z.json  20260419T202742Z.json  20260419T203305Z.json  20260419T203340Z-matrix.json  20260419T203715Z-detectors.json  20260419T205444Z-matrix.json  20260419T205450Z.json  20260419T205738Z.json  20260419T205739Z-matrix.json  latest.json  llm-mode-baseline.json
commands/: humanize.toml  humanizer-commit.toml  humanizer-help.toml  humanizer-review.toml  humanizer.toml
docs/: index.html
docs/research/: IMPLEMENTATION_TRACE.md  README.md  _STATUS.md
docs/research/01-prompt-engineering-humanization/: A-academic.md  B-industry.md  C-opensource.md  D-commercial.md  E-practical.md  INDEX.md
docs/research/02-rlhf-and-alignment/: A-academic.md  B-industry.md  C-opensource.md  D-commercial.md  E-practical.md  INDEX.md
docs/research/03-persona-and-character-design/: A-academic.md  B-industry.md  C-opensource.md  D-commercial.md  E-practical.md  INDEX.md
docs/research/04-natural-language-quality/: A-academic.md  B-industry.md  C-opensource.md  D-commercial.md  E-practical.md  INDEX.md
docs/research/05-ai-text-detection-and-evasion/: A-academic.md  B-industry.md  C-opensource.md  D-commercial.md  E-practical.md  INDEX.md
evals/: README.md  llm_run.py  measure.py  perceived_humanness.py
hooks/: README.md  humanizer-activate.js  humanizer-config.js  humanizer-mode-tracker.js  humanizer-statusline.ps1  humanizer-statusline.sh  install.ps1  install.sh  uninstall.ps1  uninstall.sh  unslop-activate.js  unslop-config.js  unslop-mode-tracker.js
humanizer-humanize/: CHANGELOG.md  README.md  SECURITY.md  SKILL.md  pyproject.toml
humanizer-humanize/scripts/: benchmark.py  humanize.py  validate.py
rules/: humanizer-activate.md  unslop-activate.md
scripts/: sync-mirrors.sh
skills/humanize/scripts/: __init__.py  (+2 more)
skills/humanizer-commit/: SKILL.md
skills/humanizer-help/: SKILL.md
skills/humanizer-review/: SKILL.md
skills/unslop/: SKILL.md
tests/: ai_detector_test.py  blind_ab_test.py  human_perception_test.py  test_hooks.py  test_measure.py  verify_repo.py
tests/humanizer-humanize/: test_humanize.py
tests/unslop/: test_cli.py  test_detect.py  test_detector.py  test_humanize.py  test_perceived_humanness.py  test_soul.py  test_structural.py  test_style_memory.py  test_stylometry.py  test_surprisal.py  test_validate_contraction.py
unslop/: CHANGELOG.md  README.md  pyproject.toml
unslop/scripts/: __init__.py  cli.py  detect.py  detector.py  fetch_detectors.py  humanize.py  soul.py  structural.py  style_memory.py  stylometry.py  validate.py
(+114 files in other folders)
