[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "humanizer-humanize"
version = "0.3.0"
description = "Humanize markdown and text files — strip AI-isms while preserving code, URLs, headings, and technical content."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Humazier maintainers" }]
keywords = ["humanize", "llm", "markdown", "ai-detection", "de-slop", "prose"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Text Processing :: Markup :: Markdown",
  "Topic :: Software Development :: Documentation",
]
dependencies = []

[project.optional-dependencies]
llm = ["anthropic>=0.34"]
dev = ["pytest>=8", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/juliusbrussee/humanizer"
Issues = "https://github.com/juliusbrussee/humanizer/issues"

[project.scripts]
humanize = "scripts.cli:main"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
